{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 34,
  "lineage": "cba73fda-afbc-2b1f-559c-219cd0925fe9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025479829681a378d",
            "domain": "vpc",
            "id": "eipalloc-025479829681a378d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-33-180-157.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.180.157",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885300287765:internet-gateway/igw-0158b2fc5c34ea2c2",
            "id": "igw-0158b2fc5c34ea2c2",
            "owner_id": "885300287765",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-0d0f7c7876458307a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025479829681a378d",
            "connectivity_type": "public",
            "id": "nat-0c664645c76543028",
            "network_interface_id": "eni-0bc76631a34794a3a",
            "private_ip": "10.10.2.118",
            "public_ip": "63.33.180.157",
            "subnet_id": "subnet-0c435d56dbc0bddc3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main_gateway",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885300287765:route-table/rtb-0bb170bd0a8a315b1",
            "id": "rtb-0bb170bd0a8a315b1",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c664645c76543028",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f7c7876458307a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main_gateway",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885300287765:route-table/rtb-0b589f4df66cda248",
            "id": "rtb-0b589f4df66cda248",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "91.189.0.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0158b2fc5c34ea2c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0f7c7876458307a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dfed4dcebdde70e",
            "route_table_id": "rtb-0bb170bd0a8a315b1",
            "subnet_id": "subnet-06a0f418cb4f5f45f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main_gateway",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024a872030ae12903",
            "route_table_id": "rtb-0b589f4df66cda248",
            "subnet_id": "subnet-0c435d56dbc0bddc3"
          },
          "dependencies": [
            "aws_internet_gateway.main_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885300287765:subnet/subnet-06a0f418cb4f5f45f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a0f418cb4f5f45f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-0d0f7c7876458307a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885300287765:subnet/subnet-0c435d56dbc0bddc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c435d56dbc0bddc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            },
            "vpc_id": "vpc-0d0f7c7876458307a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:885300287765:vpc/vpc-0d0f7c7876458307a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09ac8b184d124e46a",
            "default_route_table_id": "rtb-0b5911f57442f43df",
            "default_security_group_id": "sg-0ef5364eab570124b",
            "dhcp_options_id": "dopt-012b0bec8c0ed4832",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0f7c7876458307a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5911f57442f43df",
            "owner_id": "885300287765",
            "tags": {
              "Name": "terraform-network-example"
            },
            "tags_all": {
              "Name": "terraform-network-example"
            }
          }
        }
      ]
    }
  ]
}